@@ -2,7 +2,6 @@ package seedu.address.commons.util;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;
 
 import java.util.Arrays;
@@ -65,7 +64,7 @@ public class CollectionUtilTest {
         assertNullPointerExceptionNotThrown(Collections.emptyList());
 
         // list with all non-null elements
-        assertNullPointerExceptionNotThrown(Arrays.asList(new Object(), "ham", new Integer(1)));
+        assertNullPointerExceptionNotThrown(Arrays.asList(new Object(), "ham", Integer.valueOf(1)));
         assertNullPointerExceptionNotThrown(Arrays.asList(new Object()));
 
         // confirms nulls inside nested lists are not considered
@@ -82,31 +81,6 @@ public class CollectionUtilTest {
         assertTrue(CollectionUtil.isAnyNonNull(new Object(), null));
     }
 
-    @Test
-    public void elementsAreUnique() {
-        // empty list
-        assertAreUnique();
-
-        // only one object
-        assertAreUnique((Object) null);
-        assertAreUnique(1);
-        assertAreUnique("");
-        assertAreUnique("abc");
-
-        // all objects unique
-        assertAreUnique("abc", "ab", "a");
-        assertAreUnique(1, 2);
-
-        // some identical objects
-        assertNotUnique("abc", "abc");
-        assertNotUnique("abc", "", "abc", "ABC");
-        assertNotUnique("", "abc", "a", "abc");
-        assertNotUnique(1, new Integer(1));
-        assertNotUnique(null, 1, new Integer(1));
-        assertNotUnique(null, null);
-        assertNotUnique(null, "a", "b", null);
-    }
-
     /**
      * Asserts that {@code CollectionUtil#requireAllNonNull(Object...)} throw {@code NullPointerException}
      * if {@code objects} or any element of {@code objects} is null.
@@ -114,7 +88,7 @@ public class CollectionUtilTest {
     private void assertNullPointerExceptionThrown(Object... objects) {
         try {
             requireAllNonNull(objects);
-            fail("The expected NullPointerException was not thrown");
+            throw new AssertionError("The expected NullPointerException was not thrown.");
         } catch (NullPointerException npe) {
             // expected behavior
         }
@@ -127,7 +101,7 @@ public class CollectionUtilTest {
     private void assertNullPointerExceptionThrown(Collection<?> collection) {
         try {
             requireAllNonNull(collection);
-            fail("The expected NullPointerException was not thrown");
+            throw new AssertionError("The expected NullPointerException was not thrown.");
         } catch (NullPointerException npe) {
             // expected behavior
         }
@@ -139,13 +113,5 @@ public class CollectionUtilTest {
 
     private void assertNullPointerExceptionNotThrown(Collection<?> collection) {
         requireAllNonNull(collection);
-    }
-
-    private void assertAreUnique(Object... objects) {
-        assertTrue(CollectionUtil.elementsAreUnique(Arrays.asList(objects)));
-    }
-
-    private void assertNotUnique(Object... objects) {
-        assertFalse(CollectionUtil.elementsAreUnique(Arrays.asList(objects)));
     }
 }
